# snippyts

./: .gitignore  Makefile  README.md  create_python_simple_package.sh  pyproject.toml  pyproject_template.toml  requirements.txt
src/snippyts/: __init__.py  cachionary.py  preprocessing.py  trie.py  vocabulary_tools.py
tests/: test_cachionary.py  test_string_matcher.py  tests_cachionary.py
